--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 <body>
 
-    <!-- With Nav Bar -->
+    <!-- Nav Bar Container -->
     <nav class="header">
         <!-- Logo -->
         <h1>Hori<span class="seo">seo</span>n</h1>
 
-        <!-- Page Links -->
+        <!-- Navigation Bar Page Links -->
         <div>
             <ul>
                 <li>
@@ -31,74 +31,89 @@
     </nav>
 
     <!-- Primary Content Section -->
-    </section>
+    </main>
+
     <!-- Hero Section -->
-    <section class="hero"></section>
+    <section class="hero" alt="horiseon-team-meeting"></section>
 
     <!-- 3 Rows Of Services -->
     <section class="content">
 
         <!-- Service 1 -->
         <div class="services">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="notebook-with-seo-notes" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                The dominance of mobile internet use means that users are searching for the right business as they
+                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
+                your visibility and find the right customers for your business.
             </p>
         </div>
 
         <!-- Service 2 -->
         <div id="online-reputation-management" class="services">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="person-managing-brand-reputation" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                The web is full of opinions, and some of these can be negative. Social media allows anyone with an
+                internet connection to say whatever they want about your business. Online Reputation Management gives
+                you the control over what potential customers see when they search for your business.
             </p>
         </div>
 
         <!-- Service 3 -->
         <div id="social-media-marketing" class="services">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="team-discussing-social-media-marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Social media continues to have a sizable influence on buying habits. Social media marketing helps you
+                determine which platforms are suited to your brand, using analytics to find the right markets and
+                increase your lead generation.
             </p>
         </div>
     </section>
 
     <!-- Side Menu of Benefits -->
-    <section class="benefits">
-        <div class="benefit">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </div>
-        <div class="benefit">
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </div>
-        <div class="benefit">
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-        </div>
-    </section>
+        <section class="benefits">
 
-    <!-- Footer -->
-    <footer class="footer">
-        <h3>Made with ❤️️ by Horiseon</h3>
-        <h4>Refactored by Hemlock</h4>
-        <p>
-            &copy; 2023 Horiseon Social Solution Services, Inc.
-        </p>
-    </footer>
+            <div class="benefit">
+                <h3>Lead Generation</h3>
+                <img src="./assets/images/lead-generation.png" alt="lead-generation-marketing-funnel"/>
+                <p>
+                    Inbound strategies for lead generation require less work for your business, bringing customers directly
+                    to your website.
+                </p>
+            </div>
+
+            <div class="benefit">
+                <h3>Brand Awareness</h3>
+                <img src="./assets/images/brand-awareness.png" alt="person-discovering-a-brand"/>
+                <p>
+                    Users find your business through paid and organic searches, increasing the search ranking and visibility
+                    for your business.
+                </p>
+            </div>
+
+            <div class="benefit">
+                <h3>Cost Management</h3>
+                <img src="./assets/images/cost-management.png" alt="depiction-of-cost-management"/>
+                <p>
+                    As the search ranking for your business increases, your advertising costs decrease, and you no longer
+                    need to advertise your page.
+                </p>
+            </div>
+        
+        </section>
+    </main>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <h3>Made with ❤️️ by Horiseon</h3>
+            <h4>Refactored by Hemlock</h4>
+            <p>
+                &copy; 2023 Horiseon Social Solution Services, Inc.
+            </p>
+        </footer>
 </body>
 
 </html>
