--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
 
     <!-- Nav Bar Container -->
-    <nav class="header">
+    <header class="header">
         <!-- Logo -->
         <h1>Hori<span class="seo">seo</span>n</h1>
 
         <!-- Navigation Bar Page Links -->
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -27,80 +27,80 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
     <!-- Primary Content Section -->
     </main>
 
-    <!-- Hero Section -->
-    <section class="hero" alt="horiseon team meeting"></section>
+        <!-- Hero Section -->
+        <section class="hero" aria-label="horiseon team meeting"></section>
 
-    <!-- 3 Rows Of Services -->
-    <section class="content">
+        <!-- 3 Rows Of Services -->
+        <section class="content">
 
-        <!-- Service 1 -->
-        <section class="services">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="notebook with seo notes" class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they
-                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
-                your visibility and find the right customers for your business.
-            </p>
-        </section>
-
-        <!-- Service 2 -->
-        <section id="online-reputation-management" class="services">
-            <img src="./assets/images/online-reputation-management.jpg" alt="person managing brand reputation" class="float-right" />
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an
-                internet connection to say whatever they want about your business. Online Reputation Management gives
-                you the control over what potential customers see when they search for your business.
-            </p>
-        </section>
-
-        <!-- Service 3 -->
-        <section id="social-media-marketing" class="services">
-            <img src="./assets/images/social-media-marketing.jpg" alt="team discussing social media marketing" class="float-left" />
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you
-                determine which platforms are suited to your brand, using analytics to find the right markets and
-                increase your lead generation.
-            </p>
-        </section>
-    </section>
-
-    <!-- Side Menu of Benefits -->
-        <section class="benefits">
-
-            <section class="benefit">
-                <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" alt="lead generation marketing funnel"/>
+            <!-- Service 1 -->
+            <section class="services">
+                <img src="./assets/images/search-engine-optimization.jpg" alt="notebook with seo notes" class="float-left" />
+                <h2>Search Engine Optimization</h2>
                 <p>
-                    Inbound strategies for lead generation require less work for your business, bringing customers directly
-                    to your website.
+                    The dominance of mobile internet use means that users are searching for the right business as they
+                    travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
+                    your visibility and find the right customers for your business.
                 </p>
             </section>
 
-            <section class="benefit">
-                <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" alt="person discovering a brand"/>
+            <!-- Service 2 -->
+            <section id="online-reputation-management" class="services">
+                <img src="./assets/images/online-reputation-management.jpg" alt="person managing brand reputation" class="float-right" />
+                <h2>Online Reputation Management</h2>
                 <p>
-                    Users find your business through paid and organic searches, increasing the search ranking and visibility
-                    for your business.
+                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an
+                    internet connection to say whatever they want about your business. Online Reputation Management gives
+                    you the control over what potential customers see when they search for your business.
                 </p>
             </section>
 
-            <section class="benefit">
-                <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" alt="depiction of cost management"/>
+            <!-- Service 3 -->
+            <section id="social-media-marketing" class="services">
+                <img src="./assets/images/social-media-marketing.jpg" alt="team discussing social media marketing" class="float-left" />
+                <h2>Social Media Marketing</h2>
                 <p>
-                    As the search ranking for your business increases, your advertising costs decrease, and you no longer
-                    need to advertise your page.
+                    Social media continues to have a sizable influence on buying habits. Social media marketing helps you
+                    determine which platforms are suited to your brand, using analytics to find the right markets and
+                    increase your lead generation.
                 </p>
+            </section>
+        </section>
+
+        <!-- Side Menu of Benefits -->
+            <section class="benefits">
+
+                <section class="benefit">
+                    <h3>Lead Generation</h3>
+                    <img src="./assets/images/lead-generation.png" alt="lead generation marketing funnel"/>
+                    <p>
+                        Inbound strategies for lead generation require less work for your business, bringing customers directly
+                        to your website.
+                    </p>
+                </section>
+
+                <section class="benefit">
+                    <h3>Brand Awareness</h3>
+                    <img src="./assets/images/brand-awareness.png" alt="person discovering a brand"/>
+                    <p>
+                        Users find your business through paid and organic searches, increasing the search ranking and visibility
+                        for your business.
+                    </p>
+                </section>
+
+                <section class="benefit">
+                    <h3>Cost Management</h3>
+                    <img src="./assets/images/cost-management.png" alt="depiction of cost management"/>
+                    <p>
+                        As the search ranking for your business increases, your advertising costs decrease, and you no longer
+                        need to advertise your page.
+                    </p>
             </section>
         
         </section>
